--- a/app/views/layouts/layout.slim
+++ b/app/views/layouts/layout.slim
@@ -1,7 +1,10 @@
 doctype html
 head
   title = page_title
-
+  script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"
+  script type="text/javascript" src="/js/bootstrap.min.js"
+  link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"
+  link href="/css/bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css"
 body
   a href='/' Home
   br
