Changed table style.

--- a/app/views/assignment/assignment_detail.slim
+++ b/app/views/assignment/assignment_detail.slim
@@ -3,7 +3,7 @@ h2 = assignment.assignment_type
 h2 #{assignment.total_points} Points
 hl
 h3 Questions
-table border=1
+table class="table table-bordered"
   tr
     th Question Text
     th Question Value
