--- a/app/views/question/delete_question.slim
+++ b/app/views/question/delete_question.slim
@@ -1,7 +1,7 @@
 h1 Delete Question
 h2 = assignment.name
 hl
-table border=1
+table class="table table-bordered"
   tr
     th Question
     th Points
