--- a/app/views/student/student_detail.slim
+++ b/app/views/student/student_detail.slim
@@ -2,7 +2,7 @@ h1 = student.name
 h2 = student.udm_id
 hl
 h3 Assignments
-table border=1
+table class="table table-bordered"
   tr
     th Name
     th Type
