--- a/app/views/assignment/delete_assignment.slim
+++ b/app/views/assignment/delete_assignment.slim
@@ -1,7 +1,7 @@
 h1 Delete Assignment
 hl
 h2 Assignments
-table border=1
+table class="table table-bordered"
   tr
     th Assignment Name
     th Assignment Type
