Added bootstrap button classes to links to make them stand out more.

--- a/app/views/assignment/assignment_detail.slim
+++ b/app/views/assignment/assignment_detail.slim
@@ -11,6 +11,6 @@ table class="table table-bordered"
     tr
       td = q.text
       td = q.value
-  a href='/question/new/#{assignment.id}' New Question
+  a class="btn btn-primary" href='/question/new/#{assignment.id}' New Question
   br    
-  a href='/question/delete/#{assignment.id}' Delete Question
+  a class="btn btn-primary" href='/question/delete/#{assignment.id}' Delete Question
