--- a/app/views/index.slim
+++ b/app/views/index.slim
@@ -2,11 +2,11 @@ h1 Summary of Students and Assignments
 hl
 div id="students"
   == render 'partials/student_summary', layout: false, locals: {students: Student.all}
-  a href="/student/new" New Student
+  a class="btn btn-primary" href="/student/new" New Student
   br
-  a href="/student/delete" Delete Student
+  a class="btn btn-primary" href="/student/delete" Delete Student
 div id="assignments"
   == render 'partials/assignment_summary', layout: false, locals: {assignments: Assignment.where(student_id: nil)}
-  a href="/assignment/new" New Assignment
+  a class="btn btn-primary" href="/assignment/new" New Assignment
   br
-  a href="/assignment/delete" Delete Assignment  
+  a class="btn btn-primary" href="/assignment/delete" Delete Assignment  
