--- a/app/views/layouts/layout.slim
+++ b/app/views/layouts/layout.slim
@@ -6,6 +6,7 @@ head
   link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"
   link href="/css/bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css"
 body
-  a href='/' Home
-  br
-  ==yield
+  div class="container"
+    a class="btn" href='/' Home
+    br
+    ==yield
