Added bootstrap wells to grading page to distinguish different questions.

--- a/app/views/student/assignment.slim
+++ b/app/views/student/assignment.slim
@@ -6,10 +6,11 @@ h3 Questions
 - form_tag "/student/assignment", method: "post" do
   - questions.each do |q|
     - field_set_tag do
-      h5 = q.text
-      h5 #{q.value} Points
-      == label_tag :"score_#{q.id}"
-      == select_tag :"score_#{q.id}", options: (0..(q.value)).to_a, selected: q.score if q.score
+      div class="well"
+        h5 = q.text
+        h5 #{q.value} Points
+        == label_tag :"score_#{q.id}"
+        == select_tag :"score_#{q.id}", options: (0..(q.value)).to_a, selected: q.score if q.score
   - field_set_tag do
     == hidden_field_tag :assignment, value: assignment.id    
     == submit_tag "Save"    
